Send email outlined

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <div class="contact">
     <a id="contact"></a>
     <h2>Contact Us</h2>
-    <form action="mailto:mbade314@gmail.com" method="post" enctype="text/plain">
+    <form action="emailform.php" method="post" enctype="text/plain" name="contact_form">
         <label for= "name">Name:</label>
         <input type="text" name="name" id="name"><br><br>
         <label for="email">E-mail:</label>
@@ -102,6 +102,8 @@
 
 <script src="testimonials.js"></script>
 <script src="slideshow.js"></script>
+<script src="email.js"></script>
+
 </div>
 </body>
 </html>
