--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <ul>
     <li><a href="index.html">HOME</a></li>
     <li><a href="#about">ABOUT</a></li>
-    <li><a href="#roofing">ROOFING SERVICES</a></li>
+    <li><a href="#roofing">SERVICES</a></li>
     <li><a href="#testimonials">TESTIMONIALS</a></li>
-    <li><a href="#contact">CONTACT US</a></li>
+    <li><a href="#contact">CONTACT</a></li>
   </ul>
 </div>
 
