--- a/index.html
+++ b/index.html
@@ -5,21 +5,40 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css"></link>
+  <link rel="stylesheet" href="header.css"></link>
+  <link rel="stylesheet" href="testimonials.css"></link>
+  <link rel="stylesheet" href="aboutandroofing.css"></link>
+  <link rel="stylesheet" href="contact.css"></link>
+
+
+
+
 </head>
 <body>
 <div clas="container">
 <header>
     <div class="logo-container">
-        <a href="index.html"><img src="photos/logo.jpg" class="logo"></a>
-          <br>
-        <h3><i>For your family and ours!</i></h3>
+      <a href="index.html"><img src="photos/logo.jpg" class="logo"></a>
+      <br>
+      <div>
+        <strong><i class="slogan">For your family and ours!</i></strong>
+        
+        <span><strong>Josh Janczewski</strong>, owner<br>
+        <i>(555)555-5555</i><br>
+        1111 Address Drive<br>
+        New Braunfels, TX 11111
+        </span>
+      </div>
     </div>
+    <!-- <div class="right-contact">
+      <p><strong>Josh Janczewski</strong>, owner</p>
+    </div> -->
+
 </header>
 
 <div class="topnav">
   <ul>
     <li><a href="index.html">HOME</a></li>
-    <li><a href="#about">ABOUT</a></li>
     <li><a href="#roofing">SERVICES</a></li>
     <li><a href="#testimonials">TESTIMONIALS</a></li>
     <li><a href="#contact">CONTACT</a></li>
@@ -27,11 +46,30 @@
 </div>
 
 <div class="photo-headliner">
-    <div class="inner-text">
-        <h1 style="font-size: 50px;">Superb Roofing </h1>
-        <h3>Top Quality GUARANTEED</h3>
-    </div>
+  <div class="inner-text">
+    <h1 style="font-size: 50px;">Superb Roofing </h1>
+    <h3>Top Quality GUARANTEED</h3>
+  </div>
+</div>
 
+<div class="testimonials">
+  <a id="testimonials"></a>
+  <h2>Testimonials</h2>
+    <!-- <div id="testimonials-rotation"></div> -->
+  <div class="before-and-after">
+    <img src="photos/roofs/roof-1.jpg"><br>
+    <div class="quote-container">"Superb Roofing gave us an awesome black rooftop <br>to help keep the house a comfortable 90 degrees!"<br><strong>-Gladys</strong></div>
+  </div>
+  <div class="before-and-after">
+      <img src="photos/roofs/roof-2.jpg">
+    <div class="quote-container">"We loved Superb Roofing. They're an honest, dependable,<br> and hard-working family! They were fantastic!"<br><strong>-Sandra</strong></div>
+
+  </div>
+  <div class="before-and-after">
+      <img src="photos/roofs/roof-3.jpg">
+    <div class="quote-container">"5 stars for a loving, wonderful family!"<br><strong>-David</strong></div>
+      
+  </div>
 </div>
 
 <div class="about">
@@ -47,10 +85,6 @@
   
     <div class="mySlides fade">
       <img src="photos/slideshow/construction.jpg" style="width:100%">
-    </div>
-  
-    <div class="mySlides fade">
-      <img src="photos/slideshow/girls.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
@@ -70,31 +104,29 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt hendrerit neque nec elementum. Cras dapibus dui vel pulvinar molestie. Mauris maximus urna sed convallis rutrum. Aenean sollicitudin gravida velit, in volutpat orci aliquam a. Donec est quam, auctor in mattis ac, euismod a ante. Ut vitae faucibus odio. Morbi egestas malesuada neque, a bibendum odio blandit a. Ut porta, ante vel dictum maximus, lacus lectus pellentesque eros, eu tincidunt risus tellus sit amet justo. Praesent dictum dolor diam, ac aliquam enim ultricies id. Nulla vehicula sodales odio eget mollis.</p>
 </div>
 
-<div class="testimonials">
-  <a id="testimonials"></a>
-  <h2>Testimonials</h2>
-    <div id="testimonials-rotation"></div>
-  <div id="connect">
-  <h2>Connect</h2>
-    <a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/facebook.png"></a>&nbsp;&nbsp;&nbsp;
-    <a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/instagram.jpg"></a>
-  </div>
-</div>
+
 
 <div class="contact">
     <a id="contact"></a>
     <h2>Contact Us</h2>
-    <form action="emailform.php" method="post" enctype="text/plain" name="contact_form">
+    <!-- <form action="emailform.php" method="post" enctype="text/plain" name="contact_form">
         <label for= "name">Name:</label>
-        <input type="text" name="name" id="name"><br><br>
+        <input type="text" name="name" id="name"><br>
         <label for="email">E-mail:</label>
-        <input type="text" name="email" id="email"><br><br>
+        <input type="text" name="email" id="email"><br>
         <label for="message">Message:</label><br>
         <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
         <input type="submit" value="Send">
-    </form>
-    <br>
-</div>
+    </form> -->
+    <strong>Phone: </strong>(555)555-5555<br>
+    <strong>Address:</strong> 1111 Address Dr. New Braunfels, TX 11111<br>
+    <strong>Email:</strong><a href="mailto:superb.roofing20@gmail.com"> superb.roofing20@gmail.com</a>
+    <br><br><a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/facebook.png"></a>&nbsp;&nbsp;&nbsp;
+    <a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/instagram.jpg"></a>
+    <br><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3466.6057433181068!2d-98.15459933489359!3d29.673212982018867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865c96346c234581%3A0x398e87c7cbe7a03d!2s131%20S%20Rueckle%20Rd%2C%20New%20Braunfels%2C%20TX%2078130!5e0!3m2!1sen!2sus!4v1598383288009!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  </div>
+
+
 
 <div class="footer">
   <p>&#169; Copyright Information Here</p>
@@ -102,7 +134,6 @@
 
 <script src="testimonials.js"></script>
 <script src="slideshow.js"></script>
-<script src="email.js"></script>
 
 </div>
 </body>
