--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Superb Roofing</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="header.css"></link>
+  <link rel="stylesheet" href="styles/header.css"></link>
   <link rel="stylesheet" href="testimonials.css"></link>
   <link rel="stylesheet" href="aboutandroofing.css"></link>
   <link rel="stylesheet" href="contact.css"></link>
