--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/header.css"></link>
   <link rel="stylesheet" href="testimonials.css"></link>
-  <link rel="stylesheet" href="aboutandroofing.css"></link>
+  <link rel="stylesheet" href="styles/aboutandroofing.css"></link>
   <link rel="stylesheet" href="contact.css"></link>
   <link rel="stylesheet" href="styles.css"></link>
 </head>
