--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/header.css"></link>
   <link rel="stylesheet" href="testimonials.css"></link>
   <link rel="stylesheet" href="styles/aboutandroofing.css"></link>
-  <link rel="stylesheet" href="contact.css"></link>
+  <link rel="stylesheet" href="styles/contact.css"></link>
   <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
