--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="testimonials.css"></link>
   <link rel="stylesheet" href="styles/aboutandroofing.css"></link>
   <link rel="stylesheet" href="styles/contact.css"></link>
-  <link rel="stylesheet" href="styles.css"></link>
+  <link rel="stylesheet" href="styles/styles.css"></link>
 </head>
 <body>
   <div clas="container">
