--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/header.css"></link>
-  <link rel="stylesheet" href="testimonials.css"></link>
+  <link rel="stylesheet" href="styles/testimonials.css"></link>
   <link rel="stylesheet" href="styles/aboutandroofing.css"></link>
   <link rel="stylesheet" href="styles/contact.css"></link>
   <link rel="stylesheet" href="styles/styles.css"></link>
