js scripts moved to js

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
     <p>&#169; Copyright Information Here</p>
   </div>
 
-<script src="testimonials.js"></script>
-<script src="slideshow.js"></script>
+<script src="js/testimonials.js"></script>
+<script src="js/slideshow.js"></script>
 
   </div>
 </body>
