Insta, BBB, and FB icons added

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <br>
     <div>        
       <span><strong>Josh Janczewski</strong>, owner<br>
-      <i>(555)555-5555</i><br>
-      1111 Address Drive<br>
-      New Braunfels, TX 11111
+      <i>(210)441-6377</i><br>
+      131 S Rueckle Rd<br>
+      New Braunfels, TX 78130
       </span>
     </div>
   </div>
@@ -38,7 +38,7 @@
     <div class="inner-text">
       <h1 style="font-size: 50px;">Superb Roofing </h1>
       <h2><i class="slogan">For your family and ours!</i></h2>
-      <h4>Give us a call! <br>(555)555-5555</h4>
+      <h4>Give us a call! <br>(210)441-6377</h4>
     </div>
   </div>
 
@@ -110,11 +110,13 @@
         <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
         <input type="submit" value="Send">
     </form> -->
-    <strong>Phone: </strong>(555)555-5555<br>
-    <strong>Address:</strong> 1111 Address Dr. New Braunfels, TX 11111<br>
+    <strong>Phone: </strong>(210)441-6377<br>
+    <strong>Address:</strong> 131 S Rueckle Rd New Braunfels, TX 78130<br>
     <strong>Email:</strong><a href="mailto:superb.roofing20@gmail.com"> superb.roofing20@gmail.com</a>
     <br><br><a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/facebook.png"></a>&nbsp;&nbsp;&nbsp;
-    <a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/instagram.jpg"></a>
+    <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/bbb1.jpeg"></a>&nbsp;&nbsp;&nbsp;
+
+    <a href="https://www.instagram.com/superbroofingllc/" target="_blank"><img src="photos/instagram.jpeg"></a>
   </div>
 
   <div class="footer">
