--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
   <div clas="container">
   <header>
   <div class="logo-container">
-    <img src="photos/logo.png" class="logo">
-    <br>
+    <div class="logo">
+      <img src="photos/logo.png" class="logo">
+    </div>
     <div>        
+      <div class="josh">
+        <img src='photos/josh.jpeg'>
+      </div> 
+      <br>
       <span><strong>Josh Janczewski</strong>, owner<br>
       <i>(210)441-6377</i><br>
       131 S Rueckle Rd<br>
@@ -37,55 +42,69 @@
   <div class="photo-headliner">
     <div class="inner-text">
       <h1 style="font-size: 50px;">Superb Roofing </h1>
-      <h2><i class="slogan">For your family and ours!</i></h2>
-      <h4>Give us a call! <br>(210)441-6377</h4>
+      <h2 style="font-size: 25px;"><i class="slogan"><strong>For your family and ours!</strong></i></h2>
+      <h3 style="font-size: 25px;">Give us a call! <br>(210)441-6377</h3>
     </div>
   </div>
 
   <div class="about">
     <a id="about"></a>
-    <div class="slideshow-container">
-      <img src='photos/stockfamilyphoto.jpg'>
-    </div>
+
+
+    <br>
+
+
   <!-- Slideshow container -->
-  <!--<span class="slideshow-container">
+  <span class="slideshow-container">
       
-      Full-width images with number and caption text
+      <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
         <img src="photos/slideshow/abel.jpg" style="width:100%">
       </div>
   
     
       <div class="mySlides fade">
-        <img src="photos/slideshow/construction.jpg" style="width:100%">
+        <img src="photos/slideshow/faith.jpg" style="width:100%">
+      </div>
+
+      <div class="mySlides fade">
+        <img src="photos/slideshow/able-and-faith.jpg" style="width:100%">
       </div>
   
-      <div class="mySlides fade">
-          <img src="photos/slideshow/business-card.jpg" style="width:100%">
-      </div>
-  </span>-->
+    </span>
+
     <h2>About Us</h2>
-    <p>Information about us, the Janczewskis! </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt hendrerit neque nec elementum. Cras dapibus dui vel pulvinar molestie. Mauris maximus urna sed convallis rutrum. Aenean sollicitudin gravida velit, in volutpat orci aliquam a. Donec est quam, auctor in mattis ac, euismod a ante. Ut vitae faucibus odio. Morbi egestas malesuada neque, a bibendum odio blandit a. Ut porta, ante vel dictum maximus, lacus lectus pellentesque eros, eu tincidunt risus tellus sit amet justo. Praesent dictum dolor diam, ac aliquam enim ultricies id. Nulla vehicula sodales odio eget mollis.</p>
+    <p>We are a family owned and operated roofing contractor serving south Texas. 
+      Our father started this business in 1989 with big dreams of growing it into a prosperous career. 
+      We have worked hard and diligently to carry out that dream and have carried it down 3 generations! 
+      <br><br>We provide our customers with top quality workmanship, materials, and overall service. 
+      Our team is knowledgeable in all different roofing systems and what they require. 
+      We also provide storm restoration and work for insurance proceeds on all roofs that are qualified. 
+      We take care of the insurance process for you, offer free inspections and estimates, and ensure the upmost reliability of our company. 
+      <br><br>A roof is one of the most important features of a home or business. It provides shelter and protection. 
+      We promise to always be there to keep that roof over your head in the best shape possible. 
+      We take pride in our company, in our men, and in our work. 
+      <br><br>We work for your family and ours! That is the Superb way.</p> 
+      <p id="colossians">
+        <i>"Whatever you do, work at it with all your heart, as working for the Lord, not for human masters..." - <strong>Colossians 3:23</strong></i> 
+      </p>
   </div>
 
   <div class="testimonials">
     <a id="testimonials"></a>
-    <h2>Testimonials</h2>
-    <!-- <div id="testimonials-rotation"></div> -->
-    <div class="before-and-after">
-      <img src="photos/roofs/roof-1.jpg"><br>
-      <div class="quote-container">"Superb Roofing gave us an awesome black rooftop <br>to help keep the house a comfortable 90 degrees!"<br><strong>-Gladys</strong>
+    <div class="before-and-after-1">
+      <!-- <img src="photos/roofs/roof-1.jpg"><br> -->
+      <div class="roof-quote-1">"Josh is very approachable and professional. He provided us with many options, and we decided to redo our roof with the same color. Now our roof is leak-free, and we have a safe, new roof over our heads!"<br>- Martin
       </div>
     </div>
-    <div class="before-and-after">
-      <img src="photos/roofs/roof-2.jpg">
-      <div class="quote-container">"We loved Superb Roofing. They're an honest, dependable,<br> and hard-working family! They were fantastic!"<br><strong>-Sandra</strong>
+    <div class="before-and-after-2">
+      <!-- <img src="photos/roofs/before-and-after.JPG"> -->
+      <div class="roof-quote-2">"Josh was very professional and honest. He took care of all the run around we got from our insurance company which not many roofing companies would want to deal with. He took extra time to explain each process every step of the way."<br>- Sandra
       </div>
     </div>
-    <div class="before-and-after">
-      <img src="photos/roofs/roof-3.jpg">
-      <div class="quote-container">"5 stars for a loving, wonderful family!"<br><strong>-David</strong>
+    <div class="before-and-after-3">
+      <!-- <img src="photos/roofs/roof-3.jpeg"> -->
+      <div class="roof-quote-3">"Superb roofing helped me every step of the way. They were patient, helpful, kind, and a wonderful family to work with. I highly recommend Superb Roofing."<br>- David
       </div>
     </div>
   </div>
@@ -101,6 +120,8 @@
   <div class="contact">
     <a id="contact"></a>
     <h2>Contact Us</h2>
+    <iframe style="border:1px solid #e6e6e6" src="https://kens5.com/embeds/video/273-2edd0769-0cd5-4de3-9433-687d1bbda1bd/iframe" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+    <br><br>
     <!-- <form action="emailform.php" method="post" enctype="text/plain" name="contact_form">
         <label for= "name">Name:</label>
         <input type="text" name="name" id="name"><br>
@@ -113,10 +134,10 @@
     <strong>Phone: </strong>(210)441-6377<br>
     <strong>Address:</strong> 131 S Rueckle Rd New Braunfels, TX 78130<br>
     <strong>Email:</strong><a href="mailto:superb.roofing20@gmail.com"> superb.roofing20@gmail.com</a>
-    <br><br><a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/facebook.png"></a>&nbsp;&nbsp;&nbsp;
-    <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/bbb1.jpeg"></a>&nbsp;&nbsp;&nbsp;
-
-    <a href="https://www.instagram.com/superbroofingllc/" target="_blank"><img src="photos/instagram.jpeg"></a>
+    <br><br><a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/social/facebook.png"></a>&nbsp;&nbsp;&nbsp;
+    <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/social/bbb1.jpeg"></a>&nbsp;&nbsp;&nbsp;
+    <a href="https://www.instagram.com/superbroofingllc/" target="_blank"><img src="photos/social/instagram.jpeg"></a>&nbsp;&nbsp;&nbsp;
+    <a href="https://www.thumbtack.com/tx/new-braunfels/roofing/superb-roofing-llc/service/388975581369360387?service_pk=388975581369360387&category_pk=174454027063083482&project_pk=399688010078486532&lp_request_pk=399151118418264068&zip_code=78130&keyword_pk=102906936653982585&click_origin=pro%20list%2Fclick%20pro%20container&sourcePage=&sourceEvent=" target="_blank"><img src="photos/social/thumbtack.png"></a>
   </div>
 
   <div class="footer">
