Testimonials header stylized

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/aboutandroofing.css"></link>
   <link rel="stylesheet" href="styles/contact.css"></link>
   <link rel="stylesheet" href="styles/styles.css"></link>
+  <link rel="stylesheet" href="styles/roofing.css"></link>
 </head>
 <body>
   <div clas="container">
@@ -34,8 +35,8 @@
   <div class="topnav">
     <ul>
       <li><a href="index.html">HOME</a></li>
-      <li><a href="#roofing">SERVICES</a></li>
       <li><a href="#testimonials">TESTIMONIALS</a></li>
+      <li><a href="#roofing">SERVICES</a></li>
     </ul>
   </div>
 
@@ -48,12 +49,6 @@
   </div>
 
   <div class="about">
-    <a id="about"></a>
-
-
-    <br>
-
-
   <!-- Slideshow container -->
   <span class="slideshow-container">
       
@@ -84,7 +79,7 @@
       <br><br>A roof is one of the most important features of a home or business. It provides shelter and protection. 
       We promise to always be there to keep that roof over your head in the best shape possible. 
       We take pride in our company, in our men, and in our work. 
-      <br><br>We work for your family and ours! That is the Superb way.</p> 
+      <br><br>We work for your family and ours! That is the <strong>Superb</strong> way.</p> 
       <p id="colossians">
         <i>"Whatever you do, work at it with all your heart, as working for the Lord, not for human masters..." - <strong>Colossians 3:23</strong></i> 
       </p>
@@ -92,18 +87,16 @@
 
   <div class="testimonials">
     <a id="testimonials"></a>
+    <span>Testimonials</span>
     <div class="before-and-after-1">
-      <!-- <img src="photos/roofs/roof-1.jpg"><br> -->
       <div class="roof-quote-1">"Josh is very approachable and professional. He provided us with many options, and we decided to redo our roof with the same color. Now our roof is leak-free, and we have a safe, new roof over our heads!"<br>- Martin
       </div>
     </div>
     <div class="before-and-after-2">
-      <!-- <img src="photos/roofs/before-and-after.JPG"> -->
       <div class="roof-quote-2">"Josh was very professional and honest. He took care of all the run around we got from our insurance company which not many roofing companies would want to deal with. He took extra time to explain each process every step of the way."<br>- Sandra
       </div>
     </div>
     <div class="before-and-after-3">
-      <!-- <img src="photos/roofs/roof-3.jpeg"> -->
       <div class="roof-quote-3">"Superb roofing helped me every step of the way. They were patient, helpful, kind, and a wonderful family to work with. I highly recommend Superb Roofing."<br>- David
       </div>
     </div>
