Roofing Layout Done

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   
     </span>
 
-    <h2>About Us</h2>
+    <h1>About Us</h1>
     <p>We are a family owned and operated roofing contractor serving south Texas. 
       Our father started this business in 1989 with big dreams of growing it into a prosperous career. 
       We have worked hard and diligently to carry out that dream and have carried it down 3 generations! 
@@ -93,7 +93,7 @@
       </div>
     </div>
     <div class="before-and-after-2">
-      <div class="roof-quote-2">"Josh was very professional and honest. He took care of all the run around we got from our insurance company which not many roofing companies would want to deal with. He took extra time to explain each process every step of the way."<br>- Sandra
+      <div class="roof-quote-2">"Josh was very professional and honest. He took care of all the run around we got from our insurance company which not many roofing companies would want to deal with. He took extra time to explain each process every step of the way."- Sandra
       </div>
     </div>
     <div class="before-and-after-3">
@@ -104,15 +104,48 @@
 
   <div class="roofing-services">
     <a id="roofing"></a>
-    <img src="photos/before-and-after-example.png" class="before-and-after-example">
-    <h2>Roofing Services</h2>
-    <p>Information about our roofing services</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt hendrerit neque nec elementum. Cras dapibus dui vel pulvinar molestie. Mauris maximus urna sed convallis rutrum. Aenean sollicitudin gravida velit, in volutpat orci aliquam a. Donec est quam, auctor in mattis ac, euismod a ante. Ut vitae faucibus odio. Morbi egestas malesuada neque, a bibendum odio blandit a. Ut porta, ante vel dictum maximus, lacus lectus pellentesque eros, eu tincidunt risus tellus sit amet justo. Praesent dictum dolor diam, ac aliquam enim ultricies id. Nulla vehicula sodales odio eget mollis.</p>
+    <h1>Roofing Services</h1>
+    <p>We have experience with All Roofing Systems from metal, slate, and even clay, tar, and gravel! Call us today to find out about all of your roofing options!</p>
+    <div class="roof-service">
+      <img src="photos/services/gravel.jpeg">
+      <p>Gravel Roof</p>
+      
+    </div>
+    <div class="roof-service">
+      <img src="photos/services/tar.jpeg">
+      <p>Tar Roof</p>
+      <div class="overlay">
+        <div class="text">Hello World</div>
+      </div>
+    </div>
+
+    <div class="roof-service">
+      <img src="photos/services/metal.jpeg">
+      <p>Metal Roof</p>
+    </div>
+    <div class="roof-service">
+      <img src="photos/services/wooden-shake.jpg">
+      <p>Wooden Shake Roof</p>
+    </div>
+    <div class="roof-service">
+      <img src="photos/services/slate.jpeg">
+      <p>Slate Roof</p>
+    </div>
+    <div class="roof-service">
+      <img src="photos/services/tile.jpeg">
+      <p>Clay Tile Roof</p>
+    </div>
+  
+  
+  
+  
+  
+  
   </div>
 
   <div class="contact">
     <a id="contact"></a>
-    <h2>Contact Us</h2>
+    <h1>Contact Us</h1>
     <iframe style="border:1px solid #e6e6e6" src="https://kens5.com/embeds/video/273-2edd0769-0cd5-4de3-9433-687d1bbda1bd/iframe" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
     <br><br>
     <!-- <form action="emailform.php" method="post" enctype="text/plain" name="contact_form">
@@ -124,13 +157,14 @@
         <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
         <input type="submit" value="Send">
     </form> -->
-    <strong>Phone: </strong>(210)441-6377<br>
+    <strong>Phone: </strong>(210) 441-6377<br>
     <strong>Address:</strong> 131 S Rueckle Rd New Braunfels, TX 78130<br>
     <strong>Email:</strong><a href="mailto:superb.roofing20@gmail.com"> superb.roofing20@gmail.com</a>
     <br><br><a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/social/facebook.png"></a>&nbsp;&nbsp;&nbsp;
-    <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/social/bbb1.jpeg"></a>&nbsp;&nbsp;&nbsp;
     <a href="https://www.instagram.com/superbroofingllc/" target="_blank"><img src="photos/social/instagram.jpeg"></a>&nbsp;&nbsp;&nbsp;
-    <a href="https://www.thumbtack.com/tx/new-braunfels/roofing/superb-roofing-llc/service/388975581369360387?service_pk=388975581369360387&category_pk=174454027063083482&project_pk=399688010078486532&lp_request_pk=399151118418264068&zip_code=78130&keyword_pk=102906936653982585&click_origin=pro%20list%2Fclick%20pro%20container&sourcePage=&sourceEvent=" target="_blank"><img src="photos/social/thumbtack.png"></a>
+    <a href="https://www.thumbtack.com/tx/new-braunfels/roofing/superb-roofing-llc/service/388975581369360387?service_pk=388975581369360387&category_pk=174454027063083482&project_pk=399688010078486532&lp_request_pk=399151118418264068&zip_code=78130&keyword_pk=102906936653982585&click_origin=pro%20list%2Fclick%20pro%20container&sourcePage=&sourceEvent=" target="_blank"><img src="photos/social/thumbtack.png"></a>&nbsp;&nbsp;&nbsp;
+    <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/social/bbb1.jpeg"></a>
+
   </div>
 
   <div class="footer">
