Links for types of roofs added

--- a/index.html
+++ b/index.html
@@ -107,32 +107,29 @@
     <h1>Roofing Services</h1>
     <p>We have experience with All Roofing Systems from metal, slate, and even clay, tar, and gravel! Call us today to find out about all of your roofing options!</p>
     <div class="roof-service">
-      <img src="photos/services/gravel.jpeg">
-      <p>Gravel Roof</p>
-      
+      <a href="http://www.condopedia.com/wiki/Tar_and_Gravel" target="_blank"> <img src="photos/services/gravel.jpeg"></a>
+      <p>Gravel Roof</p>      
     </div>
     <div class="roof-service">
-      <img src="photos/services/tar.jpeg">
+      <a href="https://en.wikipedia.org/wiki/Roof_coating" target="_blank"><img src="photos/services/tar.jpeg"></a>
       <p>Tar Roof</p>
-      <div class="overlay">
-        <div class="text">Hello World</div>
-      </div>
+
     </div>
 
     <div class="roof-service">
-      <img src="photos/services/metal.jpeg">
+      <a href="https://en.wikipedia.org/wiki/Metal_roof" target="_blank"><img src="photos/services/metal.jpeg"></a>
       <p>Metal Roof</p>
     </div>
     <div class="roof-service">
-      <img src="photos/services/wooden-shake.jpg">
+      <a href="https://en.wikipedia.org/wiki/Wood_shingle" target="_blank"><img src="photos/services/wooden-shake.jpg"></a>
       <p>Wooden Shake Roof</p>
     </div>
     <div class="roof-service">
-      <img src="photos/services/slate.jpeg">
+      <a href="https://www.designingbuildings.co.uk/wiki/Roof_slates" target="_blank"><img src="photos/services/slate.jpeg"></a>
       <p>Slate Roof</p>
     </div>
     <div class="roof-service">
-      <img src="photos/services/tile.jpeg">
+      <a href="https://en.wikipedia.org/wiki/Roof_tiles" target="_blank"><img src="photos/services/tile.jpeg"></a>
       <p>Clay Tile Roof</p>
     </div>
   
