Roofing Services stylized

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="styles/testimonials.css"></link>
   <link rel="stylesheet" href="styles/aboutandroofing.css"></link>
   <link rel="stylesheet" href="styles/contact.css"></link>
-  <link rel="stylesheet" href="styles/styles.css"></link>
   <link rel="stylesheet" href="styles/roofing.css"></link>
+  <link rel="stylesheet" href="styles/styles.css"></link>
+
 </head>
 <body>
   <div clas="container">
@@ -18,7 +19,7 @@
     <div class="logo">
       <img src="photos/logo.png" class="logo">
     </div>
-    <div>        
+    <div class="logo-contact">        
       <div class="josh">
         <img src='photos/josh.jpeg'>
       </div> 
@@ -111,18 +112,12 @@
       <p>Gravel Roof</p>      
     </div>
     <div class="roof-service">
-      <a href="https://en.wikipedia.org/wiki/Roof_coating" target="_blank"><img src="photos/services/tar.jpeg"></a>
-      <p>Tar Roof</p>
-
-    </div>
-
-    <div class="roof-service">
-      <a href="https://en.wikipedia.org/wiki/Metal_roof" target="_blank"><img src="photos/services/metal.jpeg"></a>
-      <p>Metal Roof</p>
-    </div>
-    <div class="roof-service">
       <a href="https://en.wikipedia.org/wiki/Wood_shingle" target="_blank"><img src="photos/services/wooden-shake.jpg"></a>
       <p>Wooden Shake Roof</p>
+    </div>
+    <div class="roof-service">
+      <a href="https://en.wikipedia.org/wiki/Roof_coating" target="_blank"><img src="photos/services/tar.jpeg"></a>
+      <p>Tar Roof</p>
     </div>
     <div class="roof-service">
       <a href="https://www.designingbuildings.co.uk/wiki/Roof_slates" target="_blank"><img src="photos/services/slate.jpeg"></a>
@@ -132,40 +127,43 @@
       <a href="https://en.wikipedia.org/wiki/Roof_tiles" target="_blank"><img src="photos/services/tile.jpeg"></a>
       <p>Clay Tile Roof</p>
     </div>
-  
-  
-  
-  
-  
-  
+    <div class="roof-service">
+      <a href="https://en.wikipedia.org/wiki/Metal_roof" target="_blank"><img src="photos/services/metal.jpeg"></a>
+      <p>Metal Roof</p>
+    </div>
   </div>
 
   <div class="contact">
     <a id="contact"></a>
     <h1>Contact Us</h1>
-    <iframe style="border:1px solid #e6e6e6" src="https://kens5.com/embeds/video/273-2edd0769-0cd5-4de3-9433-687d1bbda1bd/iframe" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
-    <br><br>
-    <!-- <form action="emailform.php" method="post" enctype="text/plain" name="contact_form">
-        <label for= "name">Name:</label>
-        <input type="text" name="name" id="name"><br>
-        <label for="email">E-mail:</label>
-        <input type="text" name="email" id="email"><br>
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
-        <input type="submit" value="Send">
-    </form> -->
-    <strong>Phone: </strong>(210) 441-6377<br>
-    <strong>Address:</strong> 131 S Rueckle Rd New Braunfels, TX 78130<br>
-    <strong>Email:</strong><a href="mailto:superb.roofing20@gmail.com"> superb.roofing20@gmail.com</a>
-    <br><br><a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/social/facebook.png"></a>&nbsp;&nbsp;&nbsp;
-    <a href="https://www.instagram.com/superbroofingllc/" target="_blank"><img src="photos/social/instagram.jpeg"></a>&nbsp;&nbsp;&nbsp;
-    <a href="https://www.thumbtack.com/tx/new-braunfels/roofing/superb-roofing-llc/service/388975581369360387?service_pk=388975581369360387&category_pk=174454027063083482&project_pk=399688010078486532&lp_request_pk=399151118418264068&zip_code=78130&keyword_pk=102906936653982585&click_origin=pro%20list%2Fclick%20pro%20container&sourcePage=&sourceEvent=" target="_blank"><img src="photos/social/thumbtack.png"></a>&nbsp;&nbsp;&nbsp;
-    <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/social/bbb1.jpeg"></a>
+    
+    <div class="news">
+      <iframe src="https://kens5.com/embeds/video/273-2edd0769-0cd5-4de3-9433-687d1bbda1bd/iframe" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+      <h3>We're on the news! Check us out!</h3>
+    </div>
 
+    <div class="contact-us">
+      <div class="josh-contact">
+        <img src='photos/josh-contact.jpeg'>
+      </div> 
+      <br>
+      <span><strong>131 S Rueckle Rd New Braunfels, TX 78130</strong></span>
+      <br>
+      <span><strong><a href="tel:2104416377">(210) 441-6377</a></strong></span>
+      <br>
+      <span><strong><a href="mailto:superb.roofing20@gmail.com"> superb.roofing20@gmail.com</strong></a></span>
+      <br><br>
+      <div class="contact-icon-container">
+        <a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/social/facebook.png" class="social-icons"></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.instagram.com/superbroofingllc/" target="_blank"><img src="photos/social/instagram.jpeg" class="social-icons"></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.thumbtack.com/tx/new-braunfels/roofing/superb-roofing-llc/service/388975581369360387?service_pk=388975581369360387&category_pk=174454027063083482&project_pk=399688010078486532&lp_request_pk=399151118418264068&zip_code=78130&keyword_pk=102906936653982585&click_origin=pro%20list%2Fclick%20pro%20container&sourcePage=&sourceEvent=" target="_blank"><img src="photos/social/thumbtack.png" class="social-icons"></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/social/bbb1.jpeg" class="social-icons"></a>
+      </div>
+    </div>
   </div>
 
   <div class="footer">
-    <p>&#169; Copyright Information Here</p>
+    <p>&#169; Copyright 2020 - Do not copy. All Rights Reserved.</p>
   </div>
 
 <script src="js/testimonials.js"></script>
