phone screen stylings done

--- a/index.html
+++ b/index.html
@@ -109,27 +109,31 @@
     <p>We have experience with All Roofing Systems from metal, slate, and even clay, tar, and gravel! Call us today to find out about all of your roofing options!</p>
     <div class="roof-service">
       <a href="http://www.condopedia.com/wiki/Tar_and_Gravel" target="_blank"> <img src="photos/services/gravel.jpeg"></a>
-      <p>Gravel Roof</p>      
+      <p>Tar and Gravel Roof</p>      
     </div>
     <div class="roof-service">
       <a href="https://en.wikipedia.org/wiki/Wood_shingle" target="_blank"><img src="photos/services/wooden-shake.jpg"></a>
       <p>Wooden Shake Roof</p>
     </div>
     <div class="roof-service">
-      <a href="https://en.wikipedia.org/wiki/Roof_coating" target="_blank"><img src="photos/services/tar.jpeg"></a>
-      <p>Tar Roof</p>
+      <a href="https://en.wikipedia.org/wiki/Roof_shingle" target="_blank"><img src="photos/services/tar.jpeg"></a>
+      <p>Shingle Roof</p>
     </div>
-    <div class="roof-service">
+    <div class="roof-service-mid">
       <a href="https://www.designingbuildings.co.uk/wiki/Roof_slates" target="_blank"><img src="photos/services/slate.jpeg"></a>
       <p>Slate Roof</p>
     </div>
-    <div class="roof-service">
+    <div class="roof-service-mid">
       <a href="https://en.wikipedia.org/wiki/Roof_tiles" target="_blank"><img src="photos/services/tile.jpeg"></a>
       <p>Clay Tile Roof</p>
     </div>
-    <div class="roof-service">
+    <div class="roof-service-mid">
       <a href="https://en.wikipedia.org/wiki/Metal_roof" target="_blank"><img src="photos/services/metal.jpeg"></a>
       <p>Metal Roof</p>
+    </div>
+    <div class="roof-service-mid">
+      <a href="https://www.homeadvisor.com/r/rubber-roofing/#:~:text=Single%2Dply%20synthetic%20membrane%20rubber,shingles%20don't%20perform%20well." target="_blank"><img src="photos/services/rubber.jpeg"></a>
+      <p>Rubber Roof</p>
     </div>
   </div>
 
@@ -147,7 +151,7 @@
         <img src='photos/josh-contact.jpeg'>
       </div> 
       <br>
-      <span><strong>131 S Rueckle Rd New Braunfels, TX 78130</strong></span>
+      <span><strong>131 S Rueckle Rd <br>New Braunfels, TX 78130</strong></span>
       <br>
       <span><strong><a href="tel:2104416377">(210) 441-6377</a></strong></span>
       <br>
