index.html spacing and slideshow fade speed changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="styles/contact.css"></link>
   <link rel="stylesheet" href="styles/roofing.css"></link>
   <link rel="stylesheet" href="styles/styles.css"></link>
-
 </head>
 <body>
   <div clas="container">
@@ -51,14 +50,12 @@
 
   <div class="about">
   <!-- Slideshow container -->
-  <span class="slideshow-container">
-      
-      <!-- Full-width images with number and caption text -->
+    <span class="slideshow-container">
+      <!-- Slideshow Images -->
       <div class="mySlides fade">
         <img src="photos/slideshow/abel.jpg" style="width:100%">
       </div>
   
-    
       <div class="mySlides fade">
         <img src="photos/slideshow/faith.jpg" style="width:100%">
       </div>
@@ -66,11 +63,11 @@
       <div class="mySlides fade">
         <img src="photos/slideshow/able-and-faith.jpg" style="width:100%">
       </div>
-  
     </span>
 
     <h1>About Us</h1>
-    <p>We are a family owned and operated roofing contractor serving south Texas. 
+    <p>
+      We are a family owned and operated roofing contractor serving south Texas. 
       Our father started this business in 1989 with big dreams of growing it into a prosperous career. 
       We have worked hard and diligently to carry out that dream and have carried it down 3 generations! 
       <br><br>We provide our customers with top quality workmanship, materials, and overall service. 
@@ -80,10 +77,11 @@
       <br><br>A roof is one of the most important features of a home or business. It provides shelter and protection. 
       We promise to always be there to keep that roof over your head in the best shape possible. 
       We take pride in our company, in our men, and in our work. 
-      <br><br>We work for your family and ours! That is the <strong>Superb</strong> way.</p> 
-      <p id="colossians">
-        <i>"Whatever you do, work at it with all your heart, as working for the Lord, not for human masters..." - <strong>Colossians 3:23</strong></i> 
-      </p>
+      <br><br>We work for your family and ours! That is the <strong>Superb</strong> way.
+    </p> 
+    <p id="colossians">
+      <i>"Whatever you do, work at it with all your heart, as working for the Lord, not for human masters..." - <strong>Colossians 3:23</strong></i> 
+    </p>
   </div>
 
   <div class="testimonials">
@@ -106,7 +104,9 @@
   <div class="roofing-services">
     <a id="roofing"></a>
     <h1>Roofing Services</h1>
-    <p>We have experience with All Roofing Systems from metal, slate, and even clay, tar, and gravel! Call us today to find out about all of your roofing options!</p>
+    <p>
+      We have experience with All Roofing Systems from metal, slate, and even clay, tar, and gravel! Call us today to find out about all of your roofing options!
+    </p>
     <div class="roof-service">
       <a href="http://www.condopedia.com/wiki/Tar_and_Gravel" target="_blank"> <img src="photos/services/gravel.jpeg"></a>
       <p>Tar and Gravel Roof</p>      
@@ -169,10 +169,8 @@
   <div class="footer">
     <p>&#169; Copyright 2020 - Do not copy. All Rights Reserved.</p>
   </div>
-
+</div>
 <script src="js/testimonials.js"></script>
 <script src="js/slideshow.js"></script>
-
-  </div>
 </body>
 </html>
