Updated testimonial quotes

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <a id="testimonials"></a>
     <span>Testimonials</span>
     <div class="before-and-after-1">
-      <div class="roof-quote-1">"Josh is very approachable and professional. He provided us with many options, and we decided to redo our roof with the same color. Now our roof is leak-free, and we have a safe, new roof over our heads!"<br>- Martin
+      <div class="roof-quote-1">"Best roofing experience. Josh really came through for all of our needs. He made the insurance process go from stressful to nothing to worry about and we received a new roof out of it, fully covered by our insurance! I wouldn't trust anyone else with my roof. Superb is our only roofer."<br>- Alice
       </div>
     </div>
     <div class="before-and-after-2">
@@ -161,7 +161,7 @@
         <a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/social/facebook.png" class="social-icons"></a>&nbsp;&nbsp;&nbsp;
         <a href="https://www.instagram.com/superbroofingllc/" target="_blank"><img src="photos/social/instagram.jpeg" class="social-icons"></a>&nbsp;&nbsp;&nbsp;
         <a href="https://www.thumbtack.com/tx/new-braunfels/roofing/superb-roofing-llc/service/388975581369360387?service_pk=388975581369360387&category_pk=174454027063083482&project_pk=399688010078486532&lp_request_pk=399151118418264068&zip_code=78130&keyword_pk=102906936653982585&click_origin=pro%20list%2Fclick%20pro%20container&sourcePage=&sourceEvent=" target="_blank"><img src="photos/social/thumbtack.png" class="social-icons"></a>&nbsp;&nbsp;&nbsp;
-        <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/social/bbb1.jpeg" class="social-icons"></a>
+        <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/social/bbb.jpeg" class="social-icons"></a>
       </div>
     </div>
   </div>
