--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <a id="testimonials"></a>
     <span>Testimonials</span>
     <div class="before-and-after-1">
-      <div class="roof-quote-1">"Best roofing experience. Josh really came through for all of our needs. He made the insurance process go from stressful to nothing to worry about and we received a new roof out of it, fully covered by our insurance! I wouldn't trust anyone else with my roof. Superb is our only roofer."<br>- Alice
+      <div class="roof-quote-1">"Best roofing experience. Josh really came through for all of our needs. He made the insurance process go from stressful to nothing to worry about and we received a new roof out of it, fully covered by our insurance! I wouldn't trust anyone else with my roof. Superb is our only roofer." - Alice
       </div>
     </div>
     <div class="before-and-after-2">
@@ -96,7 +96,7 @@
       </div>
     </div>
     <div class="before-and-after-3">
-      <div class="roof-quote-3">"Superb roofing helped me every step of the way. They were patient, helpful, kind, and a wonderful family to work with. I highly recommend Superb Roofing."<br>- David
+      <div class="roof-quote-3">"Superb roofing helped me every step of the way. They were patient, helpful, kind, and a wonderful family to work with. I highly recommend Superb Roofing."- David
       </div>
     </div>
   </div>
