--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="styles/contact.css"></link>
   <link rel="stylesheet" href="styles/roofing.css"></link>
   <link rel="stylesheet" href="styles/styles.css"></link>
+  <link rel="icon" type="image/png" href="photos/favicon.ico">
 </head>
 <body>
   <div clas="container">
