--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>Superb Roofing</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="format-detection" content="telephone=no">
+
   <link rel="stylesheet" href="styles/header.css"></link>
   <link rel="stylesheet" href="styles/testimonials.css"></link>
   <link rel="stylesheet" href="styles/aboutandroofing.css"></link>
